[package]
name = "ch-udf-common"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = "56.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
url = "2.5.4"
thiserror = "2.0.12"
tower = { version = "0.5.2", features = ["retry", "limit", "util"] }
alloy = "1.0.30"
alloy-json-rpc = "1.0.30"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "io-std", "io-util", "fs"] }
tokio-util = "0.7.15"
futures-core = "0.3.31"
duration-str = "0.17.0"
serde_qs = "0.15.0"
itertools = "0.14.0"
serde-inline-default = "0.2.3"
backoff = "0.4.0"
futures = "0.3.31"
object_store = { version = "0.12.1", features = ["http", "aws"] }
querystring = "1.1.0"
